<resources>
    <string name="app_name" translatable="false">Homer Player</string>
    <string name="demo_samples_service_notification_download">Downloading sample audiobooks</string>
    <string name="demo_samples_service_notification_install">Installing sample audiobooks</string>
    <string name="playback_service_notification">Audiobook playing</string>
    <string name="noBooksMessage">There are no audio books on the device.</string>
    <string name="copyBooksInstructionMessage">Copy audio books to folder &lt;b>/%s&lt;/b></string>
    <string name="device_admin_label" translatable="false">Homer Player</string>
    <string name="device_admin_description" translatable="false">Homer Player</string>
    <string name="hint_browsing">Swipe\nto browse titles</string>
    <string name="hint_settings">Tap 5x\nfor settings</string>
    <string name="hint_flip_to_stop">Put the device with screen down to stop</string>
    <string name="back_suppressed_by_kiosk">Exit blocked (kiosk mode is enabled)</string>
    <string name="notificationChannelPlayback">Audio playback</string>
    <string name="settings_title">Settings</string>
    <string name="settings_device_owner_required_alert">The application must be a "device owner". See http://goo.gl/46gevp</string>
    <string name="permission_rationale_title">Permission needed</string>
    <string name="permission_rationale_try_again">Try again</string>
    <string name="permission_rationale_settings">Open settings</string>
    <string name="permission_rationale_exit">Exit app</string>
    <string name="permission_rationale_download_samples">Storage permission is needed by Homer Player to save downloaded audiobook samples.</string>
    <string name="permission_rationale_scan_audiobooks">Storage permission is needed by Homer Player to access the audiobook files.</string>
    <string name="pref_help_faq_title">Help: Frequently Asked Questions</string>
    <string name="pref_help_faq_summary">Go to website: %s</string>
    <string name="pref_kiosk_mode_screen_title">Prevent exiting the application (kiosk mode)…</string>
    <string name="pref_kiosk_mode_screen_summary_disabled">Disabled</string>
    <string name="pref_kiosk_mode_screen_summary_simple">Simple kiosk mode enabled</string>
    <string name="pref_kiosk_mode_screen_summary_full">Full kiosk mode enabled</string>
    <string name="pref_kiosk_mode_full_title">Full mode - prevent exiting the application (recommended)</string>
    <string name="pref_kiosk_mode_simple_title">Simple mode - only hide the navigation bar</string>
    <string name="pref_kiosk_mode_any_summary_off">Disabled</string>
    <string name="pref_kiosk_mode_any_summary_on">Enabled</string>
    <string name="pref_kiosk_mode_simple_summary_old_version">Android 4.4 or newer required</string>
    <string name="pref_kiosk_mode_full_summary_old_version">Android 5.0 or newer required</string>
    <string name="pref_kiosk_mode_unregister_device_owner">Drop the privilege required for the full kiosk mode</string>
    <string name="pref_kiosk_mode_unregister_device_owner_dialog_message">This action will disable the full kiosk mode and cannot be easily undone.\nProceed?</string>
    <string name="pref_kiosk_mode_unregister_device_owner_summary_off">Not a "device owner"</string>
    <string name="pref_kiosk_mode_unregister_device_owner_summary_on">Privilege granted</string>
    <string name="pref_no_browser_toast">Cannot open website: no web browser found.</string>
    <string name="pref_playback_options_screen_title">Playback settings…</string>
    <string name="pref_playback_speed_title">Playback speed</string>
    <string name="pref_playback_speed_default_value" translatable="false">1.0</string>
    <string name="pref_ff_rewind_sound">Fast-forward/rewind sound</string>
    <string name="pref_ff_rewind_sound_summary_on">Enabled</string>
    <string name="pref_ff_rewind_sound_summary_off">Disabled</string>
    <string name="pref_jump_back_default_value" translatable="false">5</string>
    <string name="pref_jump_back_entry_disabled">Disabled</string>
    <string name="pref_jump_back_title">Jump back when resuming playback</string>
    <string name="pref_jump_back_summary">Jump %d seconds back</string>
    <string name="pref_sleep_timer_entry_disabled">Disable</string>
    <string name="pref_sleep_timer_title">Sleep timer</string>
    <string name="pref_sleep_timer_summary">Pause after %s of inactivity</string>
    <string name="pref_sleep_timer_summary_disabled">Disabled</string>
    <string name="pref_sleep_timer_default_value" translatable="false">0</string>
    <string name="pref_screen_orientation">Screen orientation</string>
    <string name="pref_screen_orientation_default_value" translatable="false">LANDSCAPE_AUTO</string>
    <string name="pref_reset_all_book_progress">Rewind all books to the beginning…</string>
    <string name="pref_reset_all_book_progress_dialog_title">Reset listening progress on all books?</string>
    <string name="pref_reset_all_book_progress_done">Book progress reset</string>
    <string name="pref_version_title">Version</string>
    <string name="playback_elapsed_time" translatable="false">%1$2d:%2$02d:%3$02d</string>
    <string name="playback_total_length" translatable="false">(of %1$2d:%2$02d:%3$02d)</string>
    <string name="track_length" translatable="false">%1$02d:%2$02d</string>
    <string name="trackTitle" translatable="false">Track %s</string>
    <string name="author" translatable="false">By %s</string>
    <string name="button_acc_rewind">rewind</string>
    <string name="button_acc_fastforward">fast-forward</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="multi_tap_prompt">%d more to go</string>
    <string name="noBooksOrMessage">or</string>
    <string name="noBooksDownloadSamplesButton">Download book samples</string>
    <string name="playbackErrorToast">Unable to play file:\n%s</string>
    <string name="samplesDownloadErrorTitle">Error</string>
    <string name="samplesDownloadErrorMessage">Download and installation failed.</string>
    <string name="samplesDownloadProgressTitle">Downloading…</string>
    <string name="samplesDownloadNotificationTitle">Audiobook samples for Homer Player</string>
    <string name="button_skip_forward" translatable="false">Skip Forward</string>
    <string name="button_skip_backward" translatable="false">Skip Back</string>
    <string name="label_track" translatable="false">Loading... please wait</string>
</resources>
